第四次提交（修改）

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name="com.example.sxd.thanksgivinghall.notice.NoticeDetailActivity" />
         <activity android:name="com.example.sxd.thanksgivinghall.task.TaskAddActivity" />
         <activity android:name="com.example.sxd.thanksgivinghall.task.ToDoTaskDetailActivity" />
+        <activity android:name="com.example.sxd.thanksgivinghall.task.FinishedTaskDetailActivity" />
 
         <activity android:name="com.example.sxd.thanksgivinghall.treelist.base.BasesActivity" />
         <activity android:name="com.example.sxd.thanksgivinghall.treelist.officer.BasesActivity" />
